--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
        <h4>For my sweet little sunshine ❤️ </h4>
     </span>
     <span class="b">
-        <img src="i1 - Copy - Copy - Copy.jpg" alt="hi" width="190" >
+        <img src="i1.jpg" alt="hi"  >
         <br>
         <h4>for my sweet little sunshine ❤️  </h4>
     </span>
@@ -66,4 +66,5 @@
         <h4>for my sweet little sunshine ❤️  </h4>
     </span>
 </body>
+
 </html>
